# Lab2/server/queries.js
@@ -1,3 +1,5 @@
+const { stringify } = require("querystring");
+
 const Pool = require("pg").Pool;
 const pool = new Pool({
     host: "localhost",
@@ -16,12 +18,19 @@ const getAllMovies = (request, response) => {
        
         throw error;
       }
+      let proba = JSON.stringify(results.rows[0]["array_to_json"].flat());
       response.status(200).send(`{
         "status": "OK",
         "message": "Fetched all movies",
-        "reponse": {
-          ${JSON.stringify(results.rows)}
-        }
+        "@context": {
+          "@vocab": "http://schema.org/",
+          "glumci": "actor",
+          "ime_film": "name",
+          "response":"movie"
+          },
+        "response": 
+          ${proba}
+        
        }`);
     }
   );
@@ -30,16 +39,15 @@ const getMovieById = (request, response) => {
     const id = parseInt(request.params.id)
 
   pool.query(
-    " (SELECT array_to_json(array_agg(row_to_json(t))) FROM (SELECT film.ime_film, film.datum_izdavanja, film.ocjena, film.trajanje_min,(select array_to_json(array_agg(row_to_json(d))) from (select ime_zarn from je_zarn natural join zarn where id_film=film.id_film) d) as zarn,(select array_to_json(array_agg(row_to_json(d))) from (select ime_drzava from sniman_u natural join drzava where id_film=film.id_film) d) as drzava,(select array_to_json(array_agg(row_to_json(d))) from (select ime_redatelj, prezime_redatelj from redatelji natural join je_redatelj where id_film=film.id_film) d) as redatelj,(select array_to_json(array_agg(row_to_json(d))) from (select ime_glumac, prezime_glumac from glumi_u natural join glumci where id_film=film.id_film) d) as glumci,(select array_to_json(array_agg(row_to_json(d))) from (select ime_nagrada, datum_osvajanja from je_osvojio natural join nagrada where id_film=film.id_film) d) as nagrade,film.box_office,film.budzet FROM film WHERE id_film = $1) t ) ",
+    "(SELECT array_to_json(array_agg(row_to_json(t))) FROM (SELECT film.ime_film, film.datum_izdavanja, film.ocjena, film.trajanje_min,(select array_to_json(array_agg(row_to_json(d))) from (select ime_zarn from je_zarn natural join zarn where id_film=film.id_film) d) as zarn,(select array_to_json(array_agg(row_to_json(d))) from (select ime_drzava from sniman_u natural join drzava where id_film=film.id_film) d) as drzava,(select array_to_json(array_agg(row_to_json(d))) from (select ime_redatelj, prezime_redatelj from redatelji natural join je_redatelj where id_film=film.id_film) d) as redatelj,(select array_to_json(array_agg(row_to_json(d))) from (select ime_glumac, prezime_glumac from glumi_u natural join glumci where id_film=film.id_film) d) as glumci,(select array_to_json(array_agg(row_to_json(d))) from (select ime_nagrada, datum_osvajanja from je_osvojio natural join nagrada where id_film=film.id_film) d) as nagrade,film.box_office,film.budzet FROM film WHERE id_film = $1) t ) ",
     [id],
     (error, results) => {
       if (error) {
-        
         throw error;
       }
-      let proba = JSON.stringify(results.rows);
-      let status = 'OK';
-      let message = 'Fetched movie by id,' ;
+      let proba = JSON.stringify(results.rows[0]["array_to_json"][0]);
+      let status = "OK";
+      let message = "Fetched movie by id" ;
       let returnStatus = 200;
       console.log('REsults rows ', results.rows[0]["array_to_json"]);
       
@@ -49,69 +57,129 @@ const getMovieById = (request, response) => {
           message = 'Movie with that id doesnt exist,'
           proba = 'null'
         }
+
+
         
       response.status(returnStatus).send((`{
-        "status": ${status}
-        "message": ${message}
-        "reponse": {
+        "status": "${status}",
+        "message": "${message}",
+        "@context": {
+          "@vocab": "http://schema.org/",
+          "glumci": "actor",
+          "ime_film": "name",
+          "response":"movie"
+          },
+        "response": 
           ${proba}
-        }
        }`));
     }
   );
 };
 
 const getActors = (request, response) => {
+  String.prototype.removeCharAt = function (i) {
+    console.log("pozvan")
+    var tmp = this.split(''); // convert to an array
+    tmp.splice(i - 1 , 1); // remove 1 element from the array (adjusting for non-zero-indexed counts)
+    return tmp.join(''); // reconstruct the string
+}
   pool.query(
-    " (SELECT * from glumci)",
+    "(SELECT array_to_json(array_agg(row_to_json(t))) FROM (SELECT glumci.ime_glumac, glumci.prezime_glumac FROM glumci) t ) ",
 
     (error, results) => {
       if (error) {
         throw error;
       }
+      let proba = JSON.stringify(results.rows[0]["array_to_json"].flat());
+      /*let resp;
+      for(let i = 0; i < proba.length; i++){
+          resp[i] = resp[i+1];
+      }*/
+      /*
+      proba.splice(0, 1);
+          proba = proba.splice(proba.length-1, 1);
+
+      */
+    /* for(let i = 0; i < proba.length;i++){
+      console.log("REMOVE_loop["+i+"]",proba[i] )
+
+     }*/
+
+     /*
+      console.log("REMOVE: ",proba[0] )
+      console.log("REMOVE: ",proba[proba.length-1] )
+
+      proba =  proba.removeCharAt(0);
+      proba = proba.removeCharAt(proba.length-1);
+      proba = proba.replace("[", "");
+      console.log("REMOVE: ",proba[0] );
+      console.log("REMOVE: ",proba[proba.length-1] );
+*/
+      /*for(let i = 0; i < proba.length; i++){
+        console.log("REMOVE_loop["+i+"]",proba[i] )
+  
+       }
+      */
       response.status(200).send(`{
         "status": "OK",
         "message": "Fetched all actors",
-        "reponse": {
-          ${JSON.stringify(results.rows)}
-        }
+        "@context": {
+          "@vocab": "http://schema.org/",
+          "ime_glumac": "name",
+          "prezime_glumac": "familiy_name",
+          "response":"actor"
+          },
+        "response": ${proba}
        }`);
     }
   );}
 
   const getDirectors = (request, response) => {
     pool.query(
-      " (SELECT * from redatelji)",
+      "(SELECT array_to_json(array_agg(row_to_json(t))) FROM (SELECT ime_redatelj, prezime_redatelj FROM redatelji) t ) ",
   
       (error, results) => {
         if (error) {
           throw error;
         }
+        let proba = JSON.stringify(results.rows[0]["array_to_json"].flat());
         response.status(200).send(`{
           "status": "OK",
           "message": "Fetched all directors",
-          "reponse": {
-            ${JSON.stringify(results.rows)}
-          }
+          "@context": {
+            "@vocab": "http://schema.org/",
+            "ime_redatelj": "name",
+            "prezime_redatelj": "familiy_name",
+            "response":"director"
+            },
+          "reponse": ${proba}
+          
          }`);
       }
     );}
 
 
-    const getAwards = (request, response) => {
+    const getCountry = (request, response) => {
       pool.query(
-        " (SELECT * from nagrada)",
-    
+        "(SELECT array_to_json(array_agg(row_to_json(t))) FROM (SELECT ime_drzava FROM drzava) t ) ",
+
         (error, results) => {
           if (error) {
             throw error;
           }
+          let proba = JSON.stringify(results.rows[0]["array_to_json"].flat());
+
           response.status(200).send(`{
             "status": "OK",
-            "message": "Fetched all awards",
-            "reponse": {
-              ${JSON.stringify(results.rows)}
-            }
+            "message": "Fetched all countries",
+            "@context": {
+              "@vocab": "http://schema.org/",
+              "ime_drzava": "name",
+              "response":"Country"
+              },
+            "reponse": 
+              ${proba}
+            
            }`);
         }
       );}
@@ -127,6 +195,10 @@ const createMovie = (request, response) => {
     response.status(201).send(`{
       "status": "OK",
       "message": "Created country object",
+      "@context": {
+        "@vocab": "http://schema.org/",
+        "id_drzava": "identifier"
+        },
       "reponse": {
       "id_drzava":  ${results.rows[0].id_drzava}
       }
@@ -138,8 +210,8 @@ const updateMovie = (request, response) => {
   const id_drzava = parseInt(request.params.id)
   var {ime_drzava} = request.body
   let proba = id_drzava;
-  let status = 'OK';
-  let message = 'Updated country by id,' ;
+  let status = "OK";
+  let message = "Updated country by id" ;
   let returnStatus = 200;
   let flag = false;
     pool.query("Select id_drzava from drzava ",  (error, results) => {
@@ -166,11 +238,15 @@ const updateMovie = (request, response) => {
     (error, results) => {
         
       response.status(returnStatus).send((`{
-        "status": ${status}
-        "message": ${message}
-        "reponse": {
+        "status": "${status}",
+        "message": "${message}",
+        "@context": {
+          "@vocab": "http://schema.org/",
+          "id_drzava": "identifier"
+          },
+        "reponse": 
           ${proba}
-        }
+        
        }`));
     }
   )
@@ -179,8 +255,8 @@ const updateMovie = (request, response) => {
 const deleteMovie = (request, response) => {
   const id_drzava = parseInt(request.params.id)
   let proba = id_drzava;
-  let status = 'OK';
-  let message = 'Deleted country by id,' ;
+  let status = "OK";
+  let message = "Deleted country by id" ;
   let returnStatus = 200;
   let flag = false;
     pool.query("Select id_drzava from drzava ",  (error, results) => {
@@ -202,11 +278,14 @@ const deleteMovie = (request, response) => {
   pool.query('DELETE FROM drzava WHERE id_drzava = $1', [id_drzava], (error, results) => {
       
     response.status(returnStatus).send((`{
-      "status": ${status}
-      "message": ${message}
-      "reponse": {
+      "status": "${status}",
+      "message": "${message}",
+      "@context": {
+        "@vocab": "http://schema.org/",
+        "id_drzava": "identifier"
+        },
+      "reponse": 
         ${proba}
-      }
      }`));
   })
 }
@@ -219,5 +298,5 @@ updateMovie,
 deleteMovie,
 getActors,
 getDirectors,
-getAwards
+getCountry
 };
